--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  min-height: 100vh;
-  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+  min-height: 97vh;
+  background: linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%), radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
+  background-blend-mode: screen;
 }
